--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--Inicio de Cabecera con título-->
     <div id="cabecera">
         <header>
-        <h1 id="titulo">Educación digital</h1>
+        <h1 id="titulo">Educación digital en Argentina</h1>
         <h3>Las pedagogías emergentes y las nuevas perspectivas en la educación</h3>
     </header>
 </div>
