cambios en el h1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <script src="archivo.js"></script>
     
-    <title>Educación digital</title>
+    <title>Educación digital en Argentina</title>
 </head>
 <body>
   <!--Inicio de Cabecera con título-->
