primer commit en #primeralista css.Navegadores

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
 
 <!--Inicio de Menú de Navegacion-->
+<nav>
 <aside id="primeralista">
-        <h2 id="index" href="#">Inicio</h2>
-        <li id="presentation" href="#">Presentación</li>
-        <li id="gamification" href="#">La educación en el siglo XXI</li>
-        <li id="activities" href="#">Escenarios digitales</li>
-        <li id="contact" href="#">Contacto</li>
+        <button><h2 id="index" href="#">Inicio</h2></button>
+        <button><li id="presentation" href="#">Presentación</li></button>
+        <button><li id="gamification" href="#">La educación en el siglo XXI</li></button>
+        <button><li id="activities" href="#">Escenarios digitales</li></button>
+        <button><li id="contact" href="#">Contacto</li></button>
 </aside>
+</nav>
 <!--Final de Menú de Navegacion-->
 <!---  
 <div>
